# opengl-mac

./: CMakeLists.txt  README.md  triangle.cpp
